k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rentesy-app
  labels:
    name: rentesy-app
