k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rentesy-app-ingress
  namespace: rentesy-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
  ingressClassName: nginx
  rules:
    - host: rentesy-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rentesy-app-service
                port:
                  number: 3000
    - host: minio.rentesy-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
